2003-03-19  Bradley Bell  <btb@icculus.org>

	* README: added some OS X info

2003-03-17  Bradley Bell  <btb@icculus.org>

	* main/newdemo.c: simplify DEMO_FILENAME macro

	* main/console.c, main/game.c: enable experimental console support

	* main/gamerend.c: fixed location of fps meter in multi

2003-03-16  Bradley Bell  <btb@icculus.org>

	* main/menu.c, main/newdemo.c, main/newdemo.h, main/newmenu.c:
	also look in shared data dir for demos

	* main/newdemo.c, main/newdemo.h: comments/formatting

2003-03-15  Christopher Thielen  <chris@luethy.net>

	* main/kludge.c: set CDROM_dir back to "." - tricks game into
	thinking d2 cd is always present

2003-03-15  Bradley Bell  <btb@icculus.org>

	* 2d/font.c, main/credits.c, main/scores.c: fixed opengl credits,
	scores

	* arch/sdl/rbaudio.c: formatting, enabled volume control under
	linux

	* arch/ogl/gr.c: fixed dark font bug by calling gr_set_mode from
	gr_init.  don't really know why this works, though

2003-03-14  Bradley Bell  <btb@icculus.org>

	* main/gameseq.c: fix Bitmap_replacement_data mem leakage

	* unused/bios/rbaudio.h: removed duplicate file

2003-03-14  Christopher Thielen  <chris@luethy.net>

	* arch/sdl/rbaudio.c: stop cd audio when exiting

2003-03-14  Micah J. Lieske  <MicahJon@compuserve.com>

	* main/gamecntl.c: add comments to the "only matt knows" cheats

2003-03-14  Martin Schaffner <maschaffner@gmx.ch>

	* main/gamemine.c: formatting, better texture conversion for d1
	levels

2003-03-14  Bradley Bell  <btb@icculus.org>

	* main/piggy.c: must swap all mac version pigfiles

	* main/ai.c, main/ai.h, main/bm.h, main/crypt.c, main/joydefs.h,
	main/multi.c: formatting, minor cleanups

	* 2d/rle.c: need to swap line_size on bigendian machines

	* main/mission.c, main/mission.h: detect mac full version hogfile

2003-03-13  Bradley Bell  <btb@icculus.org>

	* arch/sdl/joydefs.c, main/kconfig.c, main/kconfig.h, main/menu.c:
	added joy/mouse sensitivity slider, increased range to 16, and