@@ -1,4 +1,4 @@
-/* $Id: font.c,v 1.24 2003-03-15 14:17:52 btb Exp $ */
+/* $Id: font.c,v 1.25 2003-03-19 19:21:34 btb Exp $ */
 /*
 THE COMPUTER CODE CONTAINED HEREIN IS THE SOLE PROPERTY OF PARALLAX
 SOFTWARE CORPORATION ("PARALLAX").  PARALLAX, IN DISTRIBUTING THE CODE TO
@@ -1102,7 +1102,7 @@ int gr_internal_color_string(int x, int y, char *s )
 }
 
 #else //OGL
-#include "../main/inferno.h"
+
 #include "ogl_init.h"
 #include "args.h"
 //font handling routines for OpenGL - Added 9/25/99 Matthew Mueller - they are here instead of in arch/ogl because they use all these defines
